# binseq

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cbq-integration/: Cargo.toml
cbq-integration/src/: read.rs
cbq-integration/src/core/: utils.rs
cbq/core/: block_header.rs  index.rs  mod.rs
data/: subset.cbq  subset.vbq
examples/: auto-write.rs  bench_simd.rs  example.rs  grep.rs  network_streaming.rs  parallel_processing.rs  parallel_range.rs  read.rs  read_write.rs  reader.rs  streaming.rs  write.rs  writer.rs
src/: error.rs  lib.rs  main.rs  nuc.rs  parallel.rs  policy.rs  prelude.rs  read.rs  reader.rs  write.rs  writer.rs
src/bq/: header.rs  mod.rs  reader.rs  writer.rs
src/cbq/: mod.rs  read.rs  write.rs
src/cbq/core/: block.rs  block_header.rs  header.rs  index.rs  mod.rs  sequencing_record.rs  utils.rs
src/core/: block.rs  header.rs  mod.rs  sequencing_record.rs  utils.rs
src/record/: binseq_record.rs  mod.rs  sequencing_record.rs
src/simd/: aarch64.rs  mod.rs
src/utils/: fastx.rs  mod.rs
src/vbq/: header.rs  index.rs  mod.rs  reader.rs  writer.rs
